# ai-rand

./: .cursorrules  .env-sample  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yml  knowledge-base.txt  new-knowledge-base.txt
src/: main.rs
